[package]
name = "async-http-client"
version = "0.2.1-alpha01"
description = "Asynchronous HTTP client"
documentation = "http://matt2xu.github.io/async-http-client/"
repository = "https://github.com/matt2xu/async-http-client/"
readme = "README.md"
license = "MIT"
authors = ["Matthieu Wipliez <matthieu.wipliez@gmail.com>", "Jakob Ledermann <jakob_ledermann@web.de>"]
keywords = ["http", "client", "asynchronous", "futures", "tokio"]
exclude = [
    "docs/*",
    "tests/*",
    ".idea/*"
]

[dependencies]
tokio-core = "0.1"
futures = "0.1"
nom = "2.0"
url = "1.0"

[dev-dependencies]
env_logger = "0.3"
